fix npr logo alignment in thin nav

--- a/tumblr/less/app.less
+++ b/tumblr/less/app.less
@@ -259,7 +259,6 @@ body {
             display: block;
             height: 25px;
             line-height: 25px;
-            margin-top: -1px;
 
             img {
                 display: inline-block;
